--- a/OpenCVOfficialTest/OpenCVOfficialTest/Makefile
+++ b/OpenCVOfficialTest/OpenCVOfficialTest/Makefile
@@ -1,6 +1,16 @@
+LIBS := -lopencv_calib3d -lopencv_contrib -lopencv_core -lopencv_features2d -lopencv_flann -lopencv_gpu -lopencv_highgui -lopencv_imgproc -lopencv_legacy -lopencv_ml -lopencv_nonfree -lopencv_objdetect -lopencv_photo -lopencv_stitching -lopencv_ts -lopencv_video -lopencv_videostab #-lrt
+
+INCLUDES := /usr/include/opencv
+
+C_SRC_FILES := OpenCVOfficialTest.cpp
+C_SRC_FILES += main.cpp
+C_SRC_FILES += Board.cpp
+#C_SRC_FILES += motorController.cpp
+
+
 all:
-	g++ main.cpp OpenCVOfficialTest.cpp Board.cpp motorController.cpp -O4 -I/usr/include/opencv -lopencv_calib3d -lopencv_contrib -lopencv_core -lopencv_features2d -lopencv_flann -lopencv_gpu -lopencv_highgui -lopencv_imgproc -lopencv_legacy -lopencv_ml -lopencv_nonfree -lopencv_objdetect -lopencv_photo -lopencv_stitching -lopencv_ts -lopencv_video -lopencv_videostab -lrt  -o foosfools
-		
+	g++ $(C_SRC_FILES) -O4 -I $(INCLUDES) $(LIBS) -o foosfools
+
 clean:
 	rm -rf *.o *~ $(EXECUTABLE)
 cleanPics:
