--- a/MotorBoard/Makefile
+++ b/MotorBoard/Makefile
@@ -16,6 +16,8 @@ C_SOURCE_FILES+=main2.c
 C_SOURCE_FILES+=startup_gcc.c
 C_SOURCE_FILES+=hal2.c
 C_SOURCE_FILES+=retarget.c
+C_SOURCE_FILES+=AS5048.c
+C_SOURCE_FILES+=foos_spi.c
 
 OBJECT_FILES:=$(C_SOURCE_FILES:%.c=%.o)
 
