updated makefile to prevent any stupid linker errors caused by the new XCode breaking the stupid linker

--- a/OpenCVOfficialTest/OpenCVOfficialTest/Makefile
+++ b/OpenCVOfficialTest/OpenCVOfficialTest/Makefile
@@ -8,9 +8,10 @@ C_SRC_FILES += Board.cpp
 C_SRC_FILES += ../../MotorBoard/virtualPort/virtualPort.cpp
 #C_SRC_FILES += motorController.cpp
 
+C_FLAGS:=-stdlib=libstdc++ -O3
 
 all:
-	g++ $(C_SRC_FILES) -O4 -I $(INCLUDES) $(LIBS) -o foosfools
+	g++ $(C_FLAGS) $(C_SRC_FILES) -I $(INCLUDES) $(LIBS) -o foosfools
 
 clean:
 	rm -rf *.o *~ $(EXECUTABLE)
